Realiza algunos cambios que generaban errores

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,14 @@
 spring.application.name=spring-s3
 
-# Import .env
-spring.config.import=optional:file:./secrets.properties
-
 # AWS
-aws.access.key=${acces.key}
-aws.secret.key=${secret.key}
-aws.region=${region}
+aws.access.key=
+aws.secret.key=
+aws.region=
 
 # File config
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-spring.destination.folder="src/main/resource/static/"
+spring.destination.folder=.download
 
 # LOGGIN
 logging.level.software.amazon.awssdk=DEBUG
